--- a/m10-11/src/templates/card-product.hbs
+++ b/m10-11/src/templates/card-product.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
   <div class="col">
     <div class="card h-100">
-      <img src={{thumbnail}} class="card-img-top" alt={{description}}>
+      <img src='{{thumbnail}}' class="card-img-top" alt='{{description}}'>
       <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{description}}</p>
