--- a/m10-11/src/templates/card-product.hbs
+++ b/m10-11/src/templates/card-product.hbs
@@ -1,14 +1,15 @@
 {{#each this}}
-  <div class="col">
-    <div class="card h-100">
-      <img src={{thumbnail}} class="card-img-top" alt={{description}}>
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <p class="card-text">{{description}}</p>
+  <div class='col'>
+    <div class='card h-100'>
+      <img src='{{thumbnail}}' class='card-img-top' alt='{{description}}' />
+      <div class='card-body'>
+        <h5 class='card-title'>{{title}}</h5>
+        <p class='card-text'>{{description}}</p>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Rating: {{rating}}</small> <br>
-        <b class="h-2 text-body">Price: {{price}} $</b>
+      <div class='card-footer'>
+        <small class='text-muted'>Rating: {{rating}}</small>
+        <br />
+        <b class='h-2 text-body'>Price: {{price}} $</b>
       </div>
     </div>
   </div>
