--- a/m10-11/src/templates/card-new-product.hbs
+++ b/m10-11/src/templates/card-new-product.hbs
@@ -1,8 +1,8 @@
 <div class='card text-bg-light mb-3' style='max-width: 540px;'>
   <div class='row g-0'>
     <div class='col-md-4'>
-      <img 
-        src={{thumbnail}}
+      <img
+        src='{{thumbnail}}'
         class='img-fluid rounded-start'
         alt='{{title}}'
       />
@@ -11,9 +11,7 @@
       <div class='card-body'>
         <h5 class='card-title'>{{title}}</h5>
         <p class='card-text'>{{description}}</p>
-        <p class='card-text'>
-          <small class='text-muted'>{{brand}}</small>
-        </p>
+        <p class='card-text display-6'>{{price}} $$</p>
       </div>
     </div>
   </div>
